--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-hi lmao
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>
+      Project Glc
+    </title>
+  </head>
+  <body>
+    <p> 
+      ABOOMBALACACA
+    </p>
+  </body>
+</html>
