--- a/index.html
+++ b/index.html
@@ -1,13 +1,28 @@
 <!DOCTYPE html>
 <html>
+  <title> Project Glc</title>
   <head>
-    <title>
-      Project Glc
-    </title>
+      <style>
+    body {
+  color: blue;
+}
+
+div {
+
+   width:500px;
+
+   height :500px;
+
+   background-color:#C7E5FF;
+
+}
+
+h1 {
+  color: rgb(93, 82, 134);
+  size:0px }
+      </style>
   </head>
   <body>
-    <p> 
-      ABOOMBALACACA
-    </p>
+      
   </body>
-</html>
+</html>  
