--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-  <title> Project Glc</title>
+  <title>A timeworn way of life</title>
   <head>
       <style>
     body {
