--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ button.center {
 <p><b>Note:</b> This example does not work in Internet Explorer 9 and earlier versions.</p>
 
 <div class="center"><p class="undertale">This game is meant to represent different stereotypes and is not meant to be offensive, by clicking accept you accept that you understand</p>
-    <button value="accept" class="center"; href="page1.html">accept</button></div>
+    <button value="accept" class="center"; href="/page1.html">accept</button></div>
 
 </body>
 </html>
