--- a/index.html
+++ b/index.html
@@ -38,7 +38,17 @@ button.center {
     bottom: 0px;
     display: table-cell; 
     vertical-align: bottom;
+    background-color:#E6F1FF ;
+     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif ; 
+     cursor:pointer
 }
+
+.button:hover {
+    background-color: azure;
+    color: white;
+
+}
+
 </style>
 </head>
 <body>
@@ -46,7 +56,7 @@ button.center {
 <p><b>Note:</b> This example does not work in Internet Explorer 9 and earlier versions.</p>
 
 <div class="center"><p class="undertale">This game is meant to represent different stereotypes and is not meant to be offensive, by clicking accept you accept that you understand</p>
-    <button value="accept" class="center"; href="/page1.html">accept</button></div>
+     <button value="accept" class="center"; type="submit"; onclick="document.location='page1.html'">accept</button> </button></div>
 
 </body>
 </html>
