--- a/page1.html
+++ b/page1.html
@@ -1,1 +1,26 @@
+<!DOCTYPE html>
+<html>
+  <head>
+      <title>
+          A timeworn way of life
+      </title>
+  </head>  
+  <style>
+      .center{
+          margin: auto;
+      }
 
+      div {
+  width: 75;
+  height: 700px;
+  background-color: #A3D8F8;
+  position: center;
+  animation: pulse 3s;
+  border-radius: 25px;
+  padding: 20px; 
+  display: table; 
+  text-align: center;
+}
+
+  </style>
+</html>
