--- a/page1.html
+++ b/page1.html
@@ -1,9 +1,3 @@
-<!DOCTYPE html>
-<html>
-  <head>
-      <title>
-          A timeworn way of life
-      </title>
   </head>  
   <style>
       .center{
@@ -11,18 +5,28 @@
       }
 
       div {
-  width: 75;
-  height: 700px;
+  width: 450px;
+  height: 5000px;
   background-color: #A3D8F8;
   position: center;
   animation: pulse 3s;
+ 
   border-radius: 25px;
   padding: 20px; 
   display: table; 
   text-align: center;
+
+  
+}
+@keyframes pulse{
+    0% {background-color:#FCEEF2} 
+    100% {background-color:#A3D8F8}
 }
 
   </style>
-  <div class="center"><p>Test</p></div>
+  <div class="center">
+  
+  
+  </div>
   
 </html>
