--- a/page1.html
+++ b/page1.html
@@ -1,3 +1,9 @@
+<!DOCTYPE html>
+<html>
+  <head>
+      <title>
+          A timeworn way of life
+      </title>
   </head>  
   <style>
       .center{
