--- a/page1.html
+++ b/page1.html
@@ -4,35 +4,27 @@
       <title>
           A timeworn way of life
       </title>
+      <link rel="stylesheet" href="style.css">
   </head>  
-  <style>
-      .center{
-          margin: auto;
-      }
+ <body>
+     
+<style>
+@import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap');
+</style>
 
-      div {
-  width: 750px;
-  height: 1000px;
-  background-color: #A3D8F8;
-  position: center;
-  animation: pulse 3s;
+<div id="parent">
+  <div class="center"><center><h1>Who will you pick?</h1></center></div>
+<div class="main">
+
+
+    
+</div>
+</div>
+  
+
+
  
-  border-radius: 25px;
-  padding: 20px; 
-  display: table; 
-  text-align: center;
+ </body> 
 
-  
-}
-@keyframes pulse{
-    0% {background-color:#FCEEF2} 
-    100% {background-color:#A3D8F8}
-}
-
-  </style>
-  <div class="center">
-  
-  
-  </div>
-  
 </html>
